[package]
name = "resol-vbus"
version = "0.2.1"
authors = ["Daniel Wippermann <Daniel.Wippermann@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/danielwippermann/resol-vbus.rs"
documentation = "https://docs.rs/resol-vbus"
description = "A Rust library for processing RESOL VBus data."
edition = "2021"

[badges]
travis-ci = { repository = "danielwippermann/resol-vbus.rs" }

[dependencies]
byteorder = "1"
chrono = "0.4"

[features]
no-default-spec = []
