[package]
name = "resol-vbus"
version = "0.3.0"
authors = ["Daniel Wippermann <Daniel.Wippermann@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/danielwippermann/resol-vbus.rs"
documentation = "https://docs.rs/resol-vbus"
description = "A Rust library for processing RESOL VBus data."
edition = "2021"
rust-version = "1.61.0"

[badges]
travis-ci = { repository = "danielwippermann/resol-vbus.rs" }

[dependencies]
chrono = "0.4.35"

[features]
no-default-spec = []
